force-app/main/default/objects/eSignSettings__c/eSignSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to get record data.</description>
    <label>eSign Settings</label>
</CustomObject>