force-app/main/default/objects/eSignSettings__c/fields/FE_Offer_URL__c.field-meta.xml
<CustomField>
    <fullName>FE_Offer_URL__c</fullName>
    <label>FE Offer URL</label>
    <type>Url</type>
</CustomField>