force-app/main/default/objects/eSignSettings__c/fields/TVE_Doc_Upload_URL_Unregistered__c.field-meta.xml
<CustomField>
    <fullName>TVE_Doc_Upload_URL_Unregistered__c</fullName>
    <label>TVE Doc Upload URL - Unregistered</label>
    <type>Url</type>
</CustomField>