force-app/main/default/objects/eSignSettings__c/fields/TVE_Project_URL_Customer_Community__c.field-meta.xml
<CustomField>
    <fullName>TVE_Project_URL_Customer_Community__c</fullName>
    <label>TVE Project URL - Customer Community</label>
    <type>Url</type>
</CustomField>