force-app/main/default/objects/eSignSettings__c/fields/TVE_Project_URL_Partner_Community__c.field-meta.xml
<CustomField>
    <fullName>TVE_Project_URL_Partner_Community__c</fullName>
    <label>TVE Project URL - Partner Community</label>
    <type>Url</type>
</CustomField>