force-app/main/default/objects/eSignSettings__c/fields/TVE_Project_URL_Sitecore__c.field-meta.xml
<CustomField>
    <fullName>TVE_Project_URL_Sitecore__c</fullName>
    <label>TVE Project URL Sitecore</label>
    <type>Url</type>
</CustomField>