force-app/main/default/objects/eSignSettings__c/fields/TVE_Project_URL_Unregistered__c.field-meta.xml
<CustomField>
    <fullName>TVE_Project_URL_Unregistered__c</fullName>
    <label>TVE Project URL - Unregistered</label>
    <type>Url</type>
</CustomField>