force-app/main/default/objects/eSignSettings__c/fields/TVE_Sitecore_Acceptance_URL__c.field-meta.xml
<CustomField>
    <fullName>TVE_Sitecore_Acceptance_URL__c</fullName>
    <label>TVE Sitecore Acceptance URL</label>
    <type>Url</type>
</CustomField>